<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="1dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/bmi_about"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/card_color"
        app:cardCornerRadius="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow>

                <TextView

                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/underweight"
                    android:gravity="center"
                    android:padding="25dp" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/bmi_underweight"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/underweight_value"
                    android:textColor="@color/black" />


            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/normal"
                    android:gravity="center"
                    android:padding="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/bmi_normal"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/normal_value"
                    android:textColor="@color/black" />


            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/overweight"
                    android:gravity="center"
                    android:padding="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/bmi_overweight"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/overweight_value"
                    android:textColor="@color/black" />


            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow>

                <TextView

                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/obese"
                    android:gravity="center"
                    android:padding="25dp" />

                <TextView

                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/bmi_obese"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/obese_value"
                    android:textColor="@color/black" />


            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />
        </TableLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>